k/vc1-kuma-demo/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kuma-demo
  namespace: default
spec:
  ingressClassName: kong
  rules:
  - http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: kuma-demo
            port:
              number: 80
---
apiVersion: v1
kind: Service
metadata:
  name: kuma-demo
  namespace: default
  annotations:
    ingress.kubernetes.io/service-upstream: "true"
spec:
  type: ExternalName
  externalName: demo-app.demo2.svc.5000.mesh
